# krawatte

./: Cargo.toml  LICENSE  README.md
docs/superpowers/specs/: 2026-07-22-krawatte-multitail-tui-design.md
src/: buffer.rs  main.rs  proc.rs  types.rs  ui.rs
